desarrollo bet